# SnapCapsule-Web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset.bat  reset.sh
.github/workflows/: docker-publish.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  Lightbox.tsx
frontend/src/views/: Chats.tsx  ChatsView.tsx  Dashboard.tsx  Memories.tsx  MemoriesView.tsx
src/: main.py
src/core/: models.py  version.py
src/core/database/: schema.py
src/core/services/: ingestion.py  media_processor.py  settings.py
src/core/utils/: logger.py  media_paths.py  paths.py
src/routers/: __init__.py  chats.py  dependencies.py  ingestion.py  media.py  memories.py  settings.py
tests/: test_api_ingestion_and_settings.py  test_api_media_routes.py  test_database_dedupe.py  test_ingestion_queue.py  test_media_paths.py  test_media_processor.py
